Ensure images fit correctly and provide option to select to prevent text flicker

--- a/src/components/ProductCard/ProductCard.module.css
+++ b/src/components/ProductCard/ProductCard.module.css
@@ -10,6 +10,14 @@
   width: 250px;
   height: 250px;
   border-radius: 10px 0 0 10px;
+  object-fit: cover;
+}
+
+.productCardImageSkeleton {
+  width: 250px;
+  height: 250px;
+  border-radius: 10px 0 0 10px;
+  background-color: grey;
 }
 
 .productCardInfo {
